# YT-InstaChatico

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  test_carousel_support.py
database/: init.sql
database/migrations/: env.py
database/migrations/versions/: 2025_09_22_1731-9664768bd8eb_.py  2025_09_22_1950-23cf478b83cd_add_comment_classification_model_and_.py  2025_09_23_1453-e5b0a5d4372d_add_question_answers_table.py  2025_09_23_1940-c2ae07ed834e_add_instagram_reply_tracking_fields.py  2025_09_27_2248-f0c8ff6d881d_add_parent_id_to_comments.py  (+34 more)
docker/: Dockerfile  docker-compose.yml
docs/: SIMPLE_ARCHITECTURE_GUIDE.md
scripts/: clean_test_data.py  load_test_data.py  populate_embeddings.py  signature_calculator.py
scripts/test_data/: personal_care_products.py
src/: celery_worker.py  main.py
src/api_v1/: __init__.py
src/core/: celery_app.py  config.py  container.py  dependencies.py  logging_config.py
tests/: README.md  conftest.py
tests/contracts/: json_api_fields.json  test_json_api_contracts.py
tests/integration/: conftest.py  helpers.py  json_api_helpers.py  test_cors.py  test_document_endpoints.py  test_instagram_insights_endpoints.py  test_json_api_answers.py  test_json_api_auth.py  test_json_api_basic.py  test_json_api_comments.py  test_json_api_concurrency.py  test_json_api_filtering.py  test_json_api_meta.py  test_json_api_pagination.py  test_json_api_stress.py  test_media_image_proxy.py  test_telegram_endpoints.py  test_webhook_endpoints.py  test_webhook_moderation_flow.py
tests/unit/: README.md  test_instagram_service.py  test_logging_config.py
(+192 files in other folders)
